--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose-validator": "^0.2.2",
     "morgan": "~1.2.3",
     "multer": "^0.1.4",
+    "newrelic": "^1.12.2",
     "serve-favicon": "~2.0.1"
   },
   "engines": {
