--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.2.3",
     "multer": "^0.1.4",
     "newrelic": "^1.12.2",
+    "pixi.js": "^2.0.0",
     "serve-favicon": "~2.0.1"
   },
   "engines": {
