--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
     "ejs": "~0.8.5",
-    "express": "~4.8.6",
+    "express": "^4.10.1",
     "express-session": "^1.8.1",
     "less-middleware": "1.0.x",
     "mongoose": "^3.8.9",
