--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "morgan": "~1.2.3",
     "multer": "^0.1.4",
     "newrelic": "^1.12.2",
-    "pixi.js": "^2.0.0",
     "serve-favicon": "~2.0.1"
   },
   "engines": {
@@ -34,6 +33,7 @@
     "gulp-jshint": "^1.8.4",
     "gulp-less": "^1.3.5",
     "gulp-plumber": "^0.6.5",
+    "gulp-rev-append": "^0.1.6",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "gulp-zip": "^2.0.2",
